@@ -1180,6 +1180,11 @@ ModificationOptions ExecutionPlan::parseModificationOptions(
 
           if (overwriteMode != OperationOptions::OverwriteMode::Unknown) {
             options.overwriteMode = overwriteMode;
+            // Set useOldSmartGraphVariable to true when overwriteMode is
+            // "ignore"
+            if (overwriteMode == OperationOptions::OverwriteMode::Ignore) {
+              options.useOldSmartGraphVariable = true;
+            }
           }
         } else if (name == StaticStrings::IgnoreRevsString) {
           options.ignoreRevs = value->isTrue();
